trunk/tests/kiama/negative/type_errors/L2/7_badcase2.ob
MODULE badcase;

VAR
    bvar : BOOLEAN;

BEGIN
    CASE 1 < 2 OF
        18 : bvar := TRUE
    END
END badcase.
